--- a/src/styles.scss
+++ b/src/styles.scss
@@ -788,11 +788,11 @@ mat-header-row {
 }
 
 .cdk-column-requestId, .cdk-column-request-payer, .cdk-column-request-payee-address {
-  flex: 0 0 230px !important;
+  flex: 0 0 225px !important;
 }
 
 .cdk-column-_meta-timestamp {
-  flex: 0 0 200px;
+  flex: 0 0 195px;
 }
 
 .gas-container {
